# rust-study

Rust_Advance/atmoic/: Cargo.toml
Rust_Advance/global_varible/: Cargo.toml
Rust_Advance/iter_study/: Cargo.toml
Rust_Advance/type_transfer/: Cargo.toml
Rust_Basic/func_pass_return/: Cargo.toml
Rust_Basic/match_process/: Cargo.toml
chat-tokio/: Cargo.toml
chat-tokio/src/: main.rs
design-patterns/abstract_factory/: Cargo.toml
design-patterns/factory-method-1/: Cargo.toml
design-patterns/strategy_2/: Cargo.toml
helloworld-tonic/: Cargo.toml  build.rs
helloworld-tonic/src/: client.rs  server.rs
my-redis/: Cargo.toml
my-redis/examples/: hello-redis.rs  use-async-await.rs  use-bounds.rs  use-read-write.rs  use-tasks.rs
my-redis/src/: connection.rs
payments_example/: Cargo.toml
payments_example/proto/: payments.proto
payments_example/src/: client.rs  server.rs
programmig_rust/chapter_7_error_handling/: Cargo.toml
programmig_rust/checked_wrapping_saturating_overflowing_arithmetic/: Cargo.toml
programmig_rust/move_study/: Cargo.toml
routeguide/: Cargo.toml
routeguide/proto/: route_guide.proto
routeguide/src/: data.rs  main.rs
rust-tracing-study/: Cargo.toml
rustengan/: Cargo.toml
rustengan/src/: main.rs
tauri-react-study/: package-lock.json  package.json
tauri-react-study/src/: App.tsx
tldrawapp/: package-lock.json  package.json
tokio-pratice/: Cargo.toml
tracing-study/: Cargo.toml
use-tonic/: Cargo.toml  build.rs
websocket-study/: Cargo.toml
websocket-study/src/: main.rs
xdiff/: Cargo.toml
xdiff/examples/: config.rs  similar.rs
xdiff/fixtures/: test.yaml
xdiff/src/: config.rs
(+145 files in other folders)
