[package]
name = "websocket-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio-tungstenite = {version = "0.18.0", features = ["native-tls"]}
tokio = {version = "1.28.1", features = ["full"]}
url = "2.3.1"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tungstenite = { version = "0.14.0", features=["rustls-tls"] }