[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
serde_yaml = "0.9.21"
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["full"]}
anyhow = "1.0.71"
reqwest = { version = "0.11", features = ["rustls"]}
similar = "2.2.1"
http-serde = "1.1.2"
url = { version = "2.3.1", features = ["serde"] }
serde_json = "1.0.96"
